made text appear when click

--- a/res/layout/status.xml
+++ b/res/layout/status.xml
@@ -11,20 +11,19 @@
     tools:context=".StatusActivity" >
 
     <TextView
-        android:id="@+id/textView1"
         android:text="@string/status_update"
         android:textColor="@color/my_blue" 
-        style="@style/title_style"	/>
+        style="@style/title_style"/>
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/button_update"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/my_brown"
+        android:layout_height="50dp"
+        android:background="@android:drawable/btn_default"
         android:text="@string/button_update" />
 
     <EditText
-        android:id="@+id/editText1"
+        android:id="@+id/edit_status"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#cfff"
