--- a/res/layout/timeline.xml
+++ b/res/layout/timeline.xml
@@ -6,15 +6,13 @@
     android:background="@color/my_orange" >
 
     <TextView
-		
-        android:text="Large Text"
-        style="@style/title_style"/>
+        style="@style/title_style"
+        android:text="@string/timeline" />
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Medium Text"
+        android:id="@+id/text_out"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
 </LinearLayout>
