can scroll timeline.xml

--- a/res/layout/timeline.xml
+++ b/res/layout/timeline.xml
@@ -9,10 +9,15 @@
         style="@style/title_style"
         android:text="@string/timeline" />
 
+    <ScrollView 
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    
     <TextView
         android:id="@+id/text_out"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:textAppearance="?android:attr/textAppearanceMedium" />
-
+	
+    </ScrollView>
 </LinearLayout>
