--- a/res/layout/row.xml
+++ b/res/layout/row.xml
@@ -23,6 +23,7 @@
 
     <TextView
         android:id="@+id/text_text"
+        android:autoLink="all"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
