--- a/res/layout/status.xml
+++ b/res/layout/status.xml
@@ -1,35 +1,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/my_orange"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".StatusActivity" >
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical" >
 
-    <TextView
-        android:text="@string/status_update"
-        android:textColor="@color/my_blue" 
-        style="@style/title_style"/>
-
+ 
     <Button
         android:onClick="onClick"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@android:drawable/btn_default"
+        android:layout_height="wrap_content"
         android:text="@string/button_update" />
 
     <EditText
         android:id="@+id/edit_status"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#cfff"
-        android:ems="10"
-        android:hint="@string/hint"
-        android:inputType="textMultiLine" >
+		android:layout_weight="1"
+        android:hint="@string/hint">
 
         <requestFocus />
     </EditText>
